第二次测试

--- a/gdms-web/src/config/application.properties
+++ b/gdms-web/src/config/application.properties
@@ -7,7 +7,10 @@ context=gdms-web
 
 pushurl_jiancheng=http://172.19.133.43:8080/gdms-web/rest/goods/push
 pushurl_guoyan=http://172.19.133.42:8080/gdms_web/rest/goods/push
-pushurl_self=http://172.19.133.30:8080/gdms-web/rest/goods/push
+
+pushurl_self=http://xbmde801093.java.cdnjsp.org/gdms-web/ws/huazhao/push/goods/one
+
+
 pushurl_lanlin=http://172.19.133.26:8080/gdms-web/rest/goods/push
 pushurl_yanping=http://172.19.133.30:8080/gdms-web/rest/goods/push
 pushurl_zuheng=http://172.19.133.30:8080/gdms-web/rest/goods/push
